ingress/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
  namespace: default
spec:
  rules:
    - host: helloworld.io
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
  tls:
    - hosts:
        - helloworld.io
      secretName: nginx-ingress-tls
